--- a/index.html
+++ b/index.html
@@ -10,52 +10,52 @@
       media="screen">
   </head>
   <body>
-    <section class="">
-      <div class="aaa">
-        <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-        <a class="more_inf"
+    <section class="header__wrapper">
+      <div class="header__content">
+        <img class="header__content--img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+        <a class="header__content--more_inf"
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </div>
     </section>
-    <div class="centered-main-page-element">
-      <h1 class="new-task">Add Item</h1>
-      <section class="">
-        <span id="topSectionForAddingElementToList">
-          <label for="new-task"></label>
-          <span class="task-row-wrapper">
-            <input id="new-task" class="task" type="text">
-            <button>Add</button>
+    <div class="content__wrapper">
+      <h1 class="content__text">Add Item</h1>
+      <section class="content__add__item__wrapper">
+        <span class="task-field-wrapper">
+          <label class="label-task" for="new-task"></label>
+          <span class="task-field-group">
+            <input id="new-task" class="input-text" type="text">
+            <button class="add-button">Add</button>
           </span>
         </span>
       </section>
-      <section class="">
-        <h1>Todo</h1>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg" alt="Delete button"></button>
+      <section class="content__todo__wrapper">
+        <h1 class="content__text">Todo</h1>
+        <ul class="content__todo__block" id="incompleteTasks">
+          <li class="content__todo__block--item">
+            <input class="input-checkbox" type="checkbox">
+            <label class="label-task">Pay Bills</label>
+            <input type="text" class="input-text">
+            <button class="edit-button">Edit</button>
+            <button class="delete-button"><img class="delete-img" src="./remove.svg" alt="Delete button"></button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete"><img src="./remove.svg" alt="Delete button"></button>
+          <li class="content__todo__block--item editMode">
+            <input class="input-checkbox" type="checkbox">
+            <label class="label-task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input-text">
+            <button class="edit-button">Save</button>
+            <button class="delete-button"><img class="delete-img" src="./remove.svg" alt="Delete button"></button>
           </li>
         </ul>
       </section>
-      <section class="">
-        <h1>Completed</h1>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg" alt="Delete button"></button>
+      <section class="content__completed__wrapper">
+        <h1 class="content__text">Completed</h1>
+        <ul class="content__completed__block" id="completed-tasks">
+          <li class="content__todo__block--item">
+            <input class="input-checkbox" type="checkbox" checked>
+            <label class="label-task">See the Doctor</label>
+            <input type="text" class="input-text">
+            <button class="edit-button">Edit</button>
+            <button class="delete-button"><img class="delete-img" src="./remove.svg" alt="Delete button"></button>
           </li>
         </ul>
       </section>
