refactor: rename h1 to label according and add lang="en" in html tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Todo App</title>
@@ -29,7 +29,7 @@
         </span>
       </section>
       <section class="content__todo__wrapper">
-        <h1 class="content__text">Todo</h1>
+        <label class="content__text">Todo</label>
         <ul class="content__todo__block" id="incompleteTasks">
           <li class="content__todo__block--item">
             <input class="input-checkbox" type="checkbox">
@@ -48,7 +48,7 @@
         </ul>
       </section>
       <section class="content__completed__wrapper">
-        <h1 class="content__text">Completed</h1>
+        <label class="content__text">Completed</label>
         <ul class="content__completed__block" id="completed-tasks">
           <li class="content__todo__block--item">
             <input class="input-checkbox" type="checkbox" checked>
